--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,11 +10,12 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
+        "dotenv": "^16.4.5",
         "express": "^4.18.2",
         "joi": "^17.9.2",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^2.3.3",
-        "sequelize": "^6.26.0"
+        "sequelize": "^6.26.0",
+        "socket.io": "^4.7.5"
     }
 }
