--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "mysql2": "^2.3.3",
         "sequelize": "^6.26.0",
         "socket.io": "^4.7.5"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
